Fix margins around release page buttons on small screens
Summary: See title.

Test Plan:
`make serve`
View release page on small screen sizes and observe the buttons
no longer overlap.

Reviewers: #bitcoin_abc, Fabien

Reviewed By: #bitcoin_abc, Fabien

Differential Revision: https://reviews.bitcoinabc.org/D7625

--- a/css/main.css
+++ b/css/main.css
@@ -692,6 +692,14 @@ td.gutter {
   padding: 20px;
 }
 
+.btn-primary {
+  /**
+   * Ensure btn-primary renders well in flexbox where a row of buttons may wrap
+   * on small screens.
+   */
+  margin: 2px 0;
+}
+
 .download-button {
   font-size: 20px;
 }
